--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
-<html lang="ko-kr">
+<!doctype html>
+<html lang="ko-KR">
   <head>
+    <title>범쌤과 함께 배우는 core javascript</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>범쌤과 함께 배우는 core javascript</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon" />
-    <script src="./main.js"></script>
+    <script src="./chapter/core/02.variable.js"></script>
   </head>
   <body>
     <h1>
