--- a/client/index.html
+++ b/client/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon" />
-    <script src="./chapter/core/11.functions.js" defer></script>
+
+    <script src="./utils/type.js" defer></script>
+    <script src="./chapter/core/12-1.object.js" defer></script>
   </head>
   <body>
     <h1>
       <span class="first">core</span>
+      <!--  -->
       <span class="second">javascript</span>
     </h1>
   </body>
