--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,24 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon" />
 
-    <script src="./utils/type.js" defer></script>
-    <script src="./chapter/core/12-1.object.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="./lib/error/typeError.js" defer></script>
+    <script src="./lib/error/syntaxError.js" defer></script>
+    <script src="./lib/error/refError.js" defer></script>
+    <script src="./lib/utils/type.js" defer></script>
+    <script src="./lib/dom/getNode.js" defer></script>
+    <script src="./lib/dom/css.js" defer></script>
+    <script src="./lib/dom/insert.js" defer></script>
+    <script src="./lib/dom/attr.js" defer></script>
+    <script src="./chapter/dom/08.bubble.js" defer></script>
   </head>
   <body>
-    <h1>
-      <span class="first">core</span>
-      <!--  -->
-      <span class="second">javascript</span>
-    </h1>
+    <section>
+      section
+      <article>
+        article
+        <p>p</p>
+      </article>
+    </section>
   </body>
 </html>
