--- a/client/index.html
+++ b/client/index.html
@@ -7,14 +7,27 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/favicon.svg" type="image/x-icon" />
 
-    <script src="./utils/type.js" defer></script>
-    <script src="./chapter/core/12-1.object.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+    <script src="./main.js" type="module"></script>
   </head>
   <body>
-    <h1>
-      <span class="first">core</span>
-      <!--  -->
-      <span class="second">javascript</span>
-    </h1>
+    <form class="calculator">
+      <div class="first">
+        <label for="firstNumber">First Value</label>
+        <input type="number" name="first" id="firstNumber" required />
+      </div>
+
+      <div class="operator">+</div>
+
+      <div class="second">
+        <label for="secondNumber">Second Value</label>
+        <input type="number" name="second" id="secondNumber" required />
+      </div>
+
+      <input id="clear" type="submit" value="clear" />
+
+      <div class="result">-</div>
+    </form>
   </body>
 </html>
