--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,36 @@
     <script src="./main.js" type="module"></script>
   </head>
   <body>
+    <!-- 유저 카드 생성 -->
+    <div class="create">
+      <button>CREATE</button>
+
+      <div class="pop">
+        <form action="/">
+          <div>
+            <label for="nameField">name : </label>
+            <input type="text" id="nameField" required />
+          </div>
+
+          <div>
+            <label for="emailField">email : </label>
+            <input type="email" id="emailField" required />
+          </div>
+
+          <div>
+            <label for="siteField">website : </label>
+            <input type="text" id="siteField" required />
+          </div>
+
+          <div>
+            <button class="cancel" type="button">취소</button>
+            <button class="done" type="submit">생성</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- 유저 카드 생성 -->
+
     <div class="user-card-list">
       <h2>User List</h2>
 
