--- a/client/index.html
+++ b/client/index.html
@@ -12,10 +12,14 @@
     <script src="./main.js" type="module"></script>
   </head>
   <body>
-    <div class="container">
-      <label for="textField"></label>
-      <textarea name="someText" id="textField" cols="30" rows="10"></textarea>
-      <button type="button" data-name="clear">clear</button>
+    <div id="app">
+      <!-- 카드 만들기 -->
+      <!-- show-image 값이 false면 이미지가 안나옴, true면 이미지가 나옴 -->
+      <!-- <custom-card show-image="false" title="card component"></custom-card> -->
+      <!-- <hr /> -->
+      <!-- 숫자 증가 감소 만들기 -->
+      <!-- <custom-counter data-value="0"></custom-counter> -->
+      <!-- <hr /> -->
     </div>
   </body>
 </html>
