--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <title>%MODE%</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/public/favicon.svg" type="image/x-icon" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/tailwind.css" />
 
-    <script src="/src/main.js" type="module"></script>
+    <script type="module" src="/src/main.js"></script>
   </head>
   <body>
-    <div id="app">hello vite aa</div>
+    <div id="app">
+      <c-header></c-header>
+    </div>
   </body>
 </html>
